--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="index.js" defer></script> 
   <script src="deepCopy.js" defer></script>
   <script src="selectFrom.js" defer></script>
   <script src="iterateObject.js" defer></script>
+  <script src="executionContext.js" defer></script>
 </head>
 <body>
   
