added the stack data structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="selectFrom.js" defer></script>
   <script src="iterateObject.js" defer></script>
   <script src="executionContext.js" defer></script>
+  <script src="stackImpl.js" defer></script>
 </head>
 <body>
   
